everything seems to work, next step is the interface

--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
                 <input type="checkbox" id="read-checkbox">
                 <button id="submit">Add Book</button>
             </div>
-        <div class="book-card-container">
+        <div class="card-container">
 
+        </div>
+        <div class="stats">
+            <div class="stats-books">Books: </div>
+            <div class="stats-books-read">Books read: </div>
+            <div class="stats-pages">Pages: </div>
+            <div class="stats-pages-read">Read Pages:</div>
         </div>
     </main>
 
