--- a/index.html
+++ b/index.html
@@ -6,8 +6,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
+    <div id="sidebar">
         <h1>Add Book</h1>
+        <div id="add-books">
+            <input type="text" id="name" class="form-input" placeholder="Title">
+            <input type="text" id="author" class="form-input" placeholder="Author">
+            <input type="text" id="pages" class="form-input" placeholder="Pages">
+            <div class="form-read">
+                <input type="checkbox" id="read-checkbox"></input>
+                <label for="read-checkbox" id="read-or-not" checked>Read</label>
+            </div>
+            <button id="submit">+</button>
+        </div>
+        <h1 id="mybooks">My Books</h1>
+        <div id="stats-container">
+            <div class="stats" id="stats-books">Books: </div>
+            <div class="stats" id="stats-books-read">Books Read:</div>
+            <div class="stats" id="stats-pages">Pages:</div>
+            <div class="stats" id="stats-pages-read">Pages Read:</div>
+        </div>
+    </div>
+    <div class="card-container">
+
+    </div>
+
+        <!-- <h1>Add Book</h1>
             <div class="add-books">
                 <label for="name">Name</label>
                 <input type="text" id="name">
@@ -19,16 +42,14 @@
                 <input type="checkbox" id="read-checkbox">
                 <button id="submit">Add Book</button>
             </div>
-        <div class="card-container">
-
-        </div>
+        
         <div class="stats">
             <div class="stats-books">Books: </div>
             <div class="stats-books-read">Books read: </div>
             <div class="stats-pages">Pages: </div>
             <div class="stats-pages-read">Read Pages:</div>
         </div>
-    </main>
+        -->
 
     <script src="script.js"></script>
 </body>
