--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div class="main">
         <div id="sidebar">
+            <div id="add-books-div">
             <h1>Add Book</h1>
             <div id="add-books">
                 <input type="text" id="title" class="form-input" placeholder="Title">
@@ -19,6 +20,8 @@
                 </div>
                 <button id="submit">+</button>
             </div>
+        </div>
+        <div id="stats-div">
             <h1 id="mybooks">My Books</h1>
             <div id="stats-container">
                 <div class="stats" id="stats-books">Books: 0</div>
@@ -26,6 +29,7 @@
                 <div class="stats" id="stats-pages">Pages: 0</div>
                 <div class="stats" id="stats-pages-read">Pages Read: 0</div>
             </div>
+        </div>
         </div>
         <div class="card-container">
 
