changed the link on the michel div

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div id="michel">
-            <a href="">Michel Lamarlière</a>
+            <a href="https://github.com/michel-lamarliere?tab=repositories">Michel Lamarlière</a>
         </div>
         </div>
         <div class="card-container">
