--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <div id="sidebar">
             <div class="add-books-container">
                 <div class="titles add-books-title">Add Book</div>
-                <div class="form-container">
+                <form class="form-container">
                     <button id="quit" class="quit-button">x</button>
-                    <input type="text" id="title" class="form-input" placeholder="Title">
-                    <input type="text" id="author" class="form-input" placeholder="Author">
-                    <input type="text" id="pages" class="form-input" placeholder="Pages">
+                    <input type="text" id="title" class="form-input" placeholder="Title" required>
+                    <input type="text" id="author" class="form-input" placeholder="Author" required>
+                    <input type="number" id="pages" class="form-input" placeholder="Pages" required step="1" min="1" max="2000">
                     <div id="checkbox-add-container">
                         <div class="checkbox-container">
                             <input type="checkbox" class="form-checkbox" checked></input>
@@ -25,7 +25,7 @@
                             <button id="submit">+</button>
                         </div>
                         </div>
-                </div>
+                </form>
             </div>
         <div id="stats-div">
             <div class=titles>My Books</div>
